# streamd

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
crates/streamd-client/: Cargo.toml
crates/streamd-client/src/: main.rs  telemetry.rs
crates/streamd-client/src/decode/: videotoolbox.rs
crates/streamd-client/src/input/: capture.rs
crates/streamd-client/src/render/: metal.rs
crates/streamd-client/src/transport/: control.rs  video_rx.rs
crates/streamd-proto/: Cargo.toml
crates/streamd-proto/src/: control.rs  packets.rs
crates/streamd-server/: Cargo.toml  build.rs
crates/streamd-server/src/: main.rs  pipeline.rs
crates/streamd-server/src/capture/: mod.rs  wayland.rs  windows.rs
crates/streamd-server/src/encode/: nvenc.rs
crates/streamd-server/src/input/: linux.rs  windows.rs
crates/streamd-server/src/transport/: control.rs  video_tx.rs
docs/releases/: README.md  v0.1.0-alpha.1.md
scripts/: generate_release_notes.py
scripts/tests/: test_generate_release_notes.py
