[package]
name = "streamd-client"
version = "0.1.0"
edition = "2021"

[dependencies]
streamd-proto = { workspace = true }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
bytes = { workspace = true }
socket2 = { workspace = true }
crossbeam-channel = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rdev = "0.5.3"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.22"
core-foundation = "0.10"
core-video = { version = "0.5.2", features = ["metal"] }
core-graphics = "0.24"
foreign-types = "0.5"
metal = "0.33.0"
objc = "0.2"

[build-dependencies]
